--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,14 @@
     <meta property="og:image:width" content="207" />
     <meta property="og:image:height" content="50" />
     <title>Progmar Technologies</title>
+    <link rel="canonical" href="https://progmartech.com.br/" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
