--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,13 @@
     <meta property="og:site_name" content="Progmar Technologies" />
     <meta property="og:url" content="https://progmartech.com.br/" />
     <meta property="og:description" content="A Progmar Technologies é uma Empresa de desenvolvimento de softwares, focada na satisfação do cliente, e aplicações inteligentes." />
-    <meta property="og:image" content="https://progmartech.com.br/img/logo.svg" />
-    <meta property="og:image:width" content="207" />
-    <meta property="og:image:height" content="50" />
+    <meta property="og:image" content="https://progmartech.com.br/img/logo-og.png" />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
     <title>Progmar Technologies</title>
     <link rel="canonical" href="https://progmartech.com.br/" />
+
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
