fix form send with emailjs and mailgun

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,12 @@
       gtag('config', 'UA-138218829-1');
     </script>
 
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+        emailjs.init("user_g11fdD8WRYzugIMomhwbd");
+      })();
+   </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
