fix form, svg and inputs

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="A Progmar Technologies é uma Empresa de desenvolvimento de softwares, focada na satisfação do cliente, e aplicações inteligentes." />
+    <meta name="description" content="A Progmar Technologies é uma empresa de desenvolvimento de softwares, focada na satisfação do cliente, e aplicações inteligentes." />
     <meta name="keywords" content="Desenvolvimento WEB, Aplicações Mobile, Sua marca na Internet, Softwares, Sites, Progmar, Technologies, Sistemas" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="1 day" />
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="Progmar Technologies" />
     <meta property="og:url" content="https://progmartech.com.br/" />
     <meta property="og:description" content="A Progmar Technologies é uma Empresa de desenvolvimento de softwares, focada na satisfação do cliente, e aplicações inteligentes." />
-    <meta property="og:image" content="https://progmartech.com.br/img/logo-og.png" />
+    <meta property="og:image" content="https://progmartech.com.br/img/logo.png" />
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="500" />
     <title>Progmar Technologies</title>
@@ -47,7 +47,7 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138218829-1"></script>
-    <script>
+    <script async>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
@@ -55,8 +55,8 @@
       gtag('config', 'UA-138218829-1');
     </script>
 
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script type="text/javascript">
+    <script async src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script async>
       (function(){
         emailjs.init("user_g11fdD8WRYzugIMomhwbd");
       })();
