fix async scripts

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138218829-1"></script>
-    <script async>
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
@@ -55,8 +55,8 @@
       gtag('config', 'UA-138218829-1');
     </script>
 
-    <script async src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script async>
+    <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script>
       (function(){
         emailjs.init("user_g11fdD8WRYzugIMomhwbd");
       })();
